--- a/demo.ipynb
+++ b/demo.ipynb
@@ -10,15 +10,15 @@
     "import pandas as pd\n",
     "import autodub\n",
     "\n",
-    "debug = True # 이미 생성된 script가 있을 경우 API요금 / 시간 절약을 위해 True로 설정\n",
+    "debug = False # 이미 생성된 script가 있을 경우 API요금 / 시간 절약을 위해 True로 설정\n",
     "\n",
     "video_path = \"./data/steve_jobs.mp4\"\n",
-    "name = \"steve_jobs\"\n",
+    "title = \"steve_jobs\"\n",
     "source_language = 'en'\n",
     "target_language = 'ja'\n",
+    "script_path = f'./results/{title}/script.json'\n",
     "\n",
-    "os.makedirs(f'./results/{name}/')\n",
-    "script_path = f'./results/{name}/script.csv'"
+    "os.makedirs(f'./results/{title}/', exist_ok=True)"
    ]
   },
   {
@@ -27,14 +27,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from autodub.script import load_script_from_json\n",
     "from autodub.stt import ClovaSTT\n",
     "\n",
     "if debug:\n",
-    "    script = pd.read_csv(script_path)\n",
+    "    script = load_script_from_json(script_path)\n",
     "\n",
     "else:\n",
     "    stt = ClovaSTT()\n",
-    "    script = stt.get_script_from_video(video_path, source_language)\n",
+    "    script = stt.make_script_from_video(video_path, source_language, title)\n",
     "    script"
    ]
   },
@@ -45,85 +46,24 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>start</th>\n",
-       "      <th>end</th>\n",
-       "      <th>source</th>\n",
-       "      <th>ja</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1145</td>\n",
-       "      <td>America</td>\n",
-       "      <td>アメリカ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1145</td>\n",
-       "      <td>15510</td>\n",
-       "      <td>to night if you feel the same energy that I do...</td>\n",
-       "      <td>今夜、もしあなたが私と同じエネルギーを感じているのなら、もしあなたが私と同じ緊急性を感じてい...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>15510</td>\n",
-       "      <td>21820</td>\n",
-       "      <td>that all across the country, from Florida to O...</td>\n",
-       "      <td>それはフロリダからオレゴン、ワシントンからメインまで全国的に</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>21820</td>\n",
-       "      <td>30035</td>\n",
-       "      <td>the people will rise up in November and John K...</td>\n",
-       "      <td>国民は11月に立ち上がり、ジョン·ケリーは大統領となり、ジョン·エドワーズは副大統領として宣...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>30035</td>\n",
-       "      <td>39370</td>\n",
-       "      <td>and this country will reclaim its promise. And...</td>\n",
-       "      <td>そして、この国は約束を取り戻すでしょう。 そして、この長い政治的暗闇の中から、明るい日が来る...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
+       "TITLE: \"steve_jobs\"\n",
+       "DATA:\n",
        "   start    end                                             source  \\\n",
-       "0      0   1145                                            America   \n",
-       "1   1145  15510  to night if you feel the same energy that I do...   \n",
-       "2  15510  21820  that all across the country, from Florida to O...   \n",
-       "3  21820  30035  the people will rise up in November and John K...   \n",
-       "4  30035  39370  and this country will reclaim its promise. And...   \n",
+       "0     30   8275  My biological mother found out later that my m...   \n",
+       "1   8275  18465  She refused to sign the final adoption papers....   \n",
+       "2  18465  26725  This was the start in my life. And seventeen y...   \n",
+       "3  26725  36625  but I naively chose a college that was almost ...   \n",
+       "4  36625  46125  After six months I couldn't see the value in i...   \n",
+       "5  46125  49226  And here I was spending all of the money my pa...   \n",
        "\n",
        "                                                  ja  \n",
-       "0                                               アメリカ  \n",
-       "1  今夜、もしあなたが私と同じエネルギーを感じているのなら、もしあなたが私と同じ緊急性を感じてい...  \n",
-       "2                     それはフロリダからオレゴン、ワシントンからメインまで全国的に  \n",
-       "3  国民は11月に立ち上がり、ジョン·ケリーは大統領となり、ジョン·エドワーズは副大統領として宣...  \n",
-       "4  そして、この国は約束を取り戻すでしょう。 そして、この長い政治的暗闇の中から、明るい日が来る...  "
+       "0   実の母は後になって、母は大学を卒業したことがなく、父も高校を卒業したことがないことを知りました。  \n",
+       "1  彼女は最終的な養子縁組書類に署名することを拒否した。 数カ月後、両親が大学に行くと約束したと...  \n",
+       "2                 これが私の人生の始まりでした。 そして17年後、私は大学に行きました  \n",
+       "3  しかし、私はスタンフォード大学とほぼ同じくらい高価な大学を選んだ。 そして、労働者階級の両親...  \n",
+       "4  6ヶ月経っても、その価値は見当たりませんでした。 私は自分の人生で何をしたいのか、大学がどう...  \n",
+       "5                           そこで私は両親が言ったお金を全部使ってしまった。  "
       ]
      },
      "execution_count": 5,
@@ -136,8 +76,8 @@
     "\n",
     "if not debug:\n",
     "    translator = PapagoTranslator()\n",
-    "    script = translator.translate_script(script, source_language, target_language)\n",
-    "    script.to_csv(script_path, index=False)\n",
+    "    script = translator.translate_script(script, target_language)\n",
+    "    script.to_json(script_path)\n",
     "script"
    ]
   },
@@ -150,14 +90,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting clips..: 100%|██████████| 5/5 [00:10<00:00,  2.05s/it]\n"
+      "Extracting clips..: 100%|██████████| 6/6 [00:09<00:00,  1.57s/it]\n"
      ]
     }
    ],
    "source": [
-    "from autodub.utils import split_video_to_clips\n",
+    "from autodub.utils import prepare_clips\n",
     "\n",
-    "split_video_to_clips(video_path, script, name=name)"
+    "prepare_clips(script)"
    ]
   },
   {
@@ -169,14 +109,58 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating prompts..: 100%|██████████| 5/5 [00:03<00:00,  1.43it/s]\n"
+      "Generating prompts..: 100%|██████████| 6/6 [00:03<00:00,  1.79it/s]\n"
      ]
     }
    ],
    "source": [
     "from autodub.tts import prepare_prompts\n",
     "\n",
-    "prepare_prompts(script, name)"
+    "prepare_prompts(script)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading VALL-E from 'vallex-korean-checkpoint.pt'..\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:py.warnings:/hdd1/aidml/sjwi/autodub/.venv/lib/python3.10/site-packages/torch/nn/utils/weight_norm.py:30: UserWarning: torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\n",
+      "  warnings.warn(\"torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\")\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Complete.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating translated speech..: 100%|██████████| 6/6 [00:44<00:00,  7.34s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from autodub import preload_models\n",
+    "from autodub.tts import generate_translated_speech\n",
+    "\n",
+    "preload_models()\n",
+    "generate_translated_speech(script, target_language='ja')"
    ]
   },
   {
@@ -188,26 +172,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating translated speech..: 100%|██████████| 5/5 [00:41<00:00,  8.21s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from autodub.tts import generate_translated_speech\n",
-    "\n",
-    "generate_translated_speech(script, name, target_language='ja')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Merging clips..: 100%|██████████| 5/5 [00:01<00:00,  4.96it/s]\n"
+      "Merging clips..: 100%|██████████| 6/6 [00:01<00:00,  5.59it/s]\n"
      ]
     },
     {
@@ -221,19 +186,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:py.warnings:/hdd1/aidml/sjwi/autodub/.venv/lib/python3.10/site-packages/moviepy/video/io/ffmpeg_reader.py:123: UserWarning: Warning: in file ./results/obama/video/source/segment_000000.mp4, 1226880 bytes wanted but 0 bytes read,at frame 35/36, at time 1.17/1.18 sec. Using the last valid frame instead.\n",
+      "WARNING:py.warnings:/hdd1/aidml/sjwi/autodub/.venv/lib/python3.10/site-packages/moviepy/video/io/ffmpeg_reader.py:123: UserWarning: Warning: in file ./results/steve_jobs//video/source/segment_000001.mp4, 1226880 bytes wanted but 0 bytes read,at frame 306/308, at time 10.20/10.24 sec. Using the last valid frame instead.\n",
       "  warnings.warn(\"Warning: in file %s, \"%(self.filename)+\n",
       "\n",
-      "WARNING:py.warnings:/hdd1/aidml/sjwi/autodub/.venv/lib/python3.10/site-packages/moviepy/video/io/ffmpeg_reader.py:123: UserWarning: Warning: in file ./results/obama/video/source/segment_000001.mp4, 1226880 bytes wanted but 0 bytes read,at frame 431/432, at time 14.37/14.39 sec. Using the last valid frame instead.\n",
+      "WARNING:py.warnings:/hdd1/aidml/sjwi/autodub/.venv/lib/python3.10/site-packages/moviepy/video/io/ffmpeg_reader.py:123: UserWarning: Warning: in file ./results/steve_jobs//video/source/segment_000002.mp4, 1226880 bytes wanted but 0 bytes read,at frame 248/250, at time 8.27/8.31 sec. Using the last valid frame instead.\n",
       "  warnings.warn(\"Warning: in file %s, \"%(self.filename)+\n",
       "\n",
-      "WARNING:py.warnings:/hdd1/aidml/sjwi/autodub/.venv/lib/python3.10/site-packages/moviepy/video/io/ffmpeg_reader.py:123: UserWarning: Warning: in file ./results/obama/video/source/segment_000002.mp4, 1226880 bytes wanted but 0 bytes read,at frame 190/191, at time 6.33/6.35 sec. Using the last valid frame instead.\n",
+      "WARNING:py.warnings:/hdd1/aidml/sjwi/autodub/.venv/lib/python3.10/site-packages/moviepy/video/io/ffmpeg_reader.py:123: UserWarning: Warning: in file ./results/steve_jobs//video/source/segment_000003.mp4, 1226880 bytes wanted but 0 bytes read,at frame 297/298, at time 9.90/9.93 sec. Using the last valid frame instead.\n",
       "  warnings.warn(\"Warning: in file %s, \"%(self.filename)+\n",
       "\n",
-      "WARNING:py.warnings:/hdd1/aidml/sjwi/autodub/.venv/lib/python3.10/site-packages/moviepy/video/io/ffmpeg_reader.py:123: UserWarning: Warning: in file ./results/obama/video/source/segment_000003.mp4, 1226880 bytes wanted but 0 bytes read,at frame 247/248, at time 8.23/8.26 sec. Using the last valid frame instead.\n",
+      "WARNING:py.warnings:/hdd1/aidml/sjwi/autodub/.venv/lib/python3.10/site-packages/moviepy/video/io/ffmpeg_reader.py:123: UserWarning: Warning: in file ./results/steve_jobs//video/source/segment_000004.mp4, 1226880 bytes wanted but 0 bytes read,at frame 285/287, at time 9.50/9.54 sec. Using the last valid frame instead.\n",
       "  warnings.warn(\"Warning: in file %s, \"%(self.filename)+\n",
       "\n",
-      "WARNING:py.warnings:/hdd1/aidml/sjwi/autodub/.venv/lib/python3.10/site-packages/moviepy/video/io/ffmpeg_reader.py:123: UserWarning: Warning: in file ./results/obama/video/source/segment_000004.mp4, 1226880 bytes wanted but 0 bytes read,at frame 338/339, at time 11.27/11.29 sec. Using the last valid frame instead.\n",
+      "WARNING:py.warnings:/hdd1/aidml/sjwi/autodub/.venv/lib/python3.10/site-packages/moviepy/video/io/ffmpeg_reader.py:123: UserWarning: Warning: in file ./results/steve_jobs//video/source/segment_000004.mp4, 1226880 bytes wanted but 0 bytes read,at frame 286/287, at time 9.53/9.54 sec. Using the last valid frame instead.\n",
+      "  warnings.warn(\"Warning: in file %s, \"%(self.filename)+\n",
+      "\n",
+      "WARNING:py.warnings:/hdd1/aidml/sjwi/autodub/.venv/lib/python3.10/site-packages/moviepy/video/io/ffmpeg_reader.py:123: UserWarning: Warning: in file ./results/steve_jobs//video/source/segment_000005.mp4, 1226880 bytes wanted but 0 bytes read,at frame 95/96, at time 3.17/3.19 sec. Using the last valid frame instead.\n",
       "  warnings.warn(\"Warning: in file %s, \"%(self.filename)+\n",
       "\n"
      ]
@@ -242,14 +210,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Successfully Saved - [ ./results/obama/video/ja//obama_ja.mp4 ]\n"
+      " Successfully Saved - [ ./results/steve_jobs/[ja]steve_jobs.mp4 ]\n"
      ]
     }
    ],
    "source": [
     "from autodub.utils import merge_clips_to_video\n",
     "\n",
-    "merge_clips_to_video(script, name, 'ja')"
+    "merge_clips_to_video(script, 'ja')"
    ]
   },
   {
